[package]
name = "cashu-mpp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
cdk = { version = "0.16.0", default-features = false, features = ["wallet"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
cdk-sqlite = { version = "0.16.0", default-features = false, features = ["wallet"] }
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
