[package]
name = "cashu-mpp-cashu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cashu payment-method validator for MPP. Verifies cashuB tokens against an allowlisted mint via NUT-07 checkstate. Framework-agnostic — takes &http::HeaderMap and returns an Outcome you can map to any HTTP framework."
readme = "README.md"

[dependencies]
cashu-mpp-core = { workspace = true }
cdk = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
