[package]
name = "random-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "random-server"
path = "src/main.rs"

[dependencies]
cashu-mpp-cashu = { workspace = true }
cashu-mpp-core = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cashu-mpp-core = { workspace = true }
cdk = { workspace = true }
cdk-sqlite = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
